# whatsapp-bot-manager

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  desktop-6acpbav.tailcf1d70.ts.net.crt  desktop-6acpbav.tailcf1d70.ts.net.key  docker-compose.yml  package-lock.json  package.json
bot/: database.js  package-lock.json  package.json  themes.js  worker.js
dashboard/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
dashboard/api/: auth.js  bot-manager.js  db.js  features.js  index.js  menu-pdf.js  paypal.js  themes.js
dashboard/public/: app.js  index.html
dashboard/src/: App.jsx  api.js  index.css
dashboard/src/components/: Auth.jsx  BotDetail.jsx  BotList.jsx  ClientModal.jsx  EmojiPicker.jsx  ExtrasView.jsx  FeaturesSection.jsx  GlobalSettings.jsx  KeywordModal.jsx  LoadingOverlay.jsx  OrdersView.jsx  Plans.jsx  ProductModal.jsx  ReplyModal.jsx  Sidebar.jsx  StatsView.jsx  StockView.jsx  Support.jsx  ThemeCreator.jsx  TicketModal.jsx  TourGuide.jsx  Users.jsx  WelcomeWizard.jsx  (+1 more)
docs/: index.html
electron/: main.js  package.json
landing/: index.html
src/: baileyes-client.js  index.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/baileys/: auth.js  qr.js
src/commands/: contacto.js  help.js  horario.js  index.js  menu.js  pedido.js
src/config/: index.js
src/database/: db.js  knex.js
src/handlers/: autobot.js  index.js  media.js
src/services/: external.js  reminders.js
src/utils/: interactive.js  logger.js
(+8 files in other folders)
