[package]
name = "botar"
version = "2.0.0"
description = "BotAr - Multi-client WhatsApp Bot Manager"
authors = ["BotAr"]
edition = "2021"

[lib]
name = "botar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
